# portwatcher

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
documentation/: CLAUDE.md  config.yaml
documentation/development/: CLAUDE.md  README.md
documentation/domain/: CLAUDE.md  portwatcher-requirements.md  portwatcher-v2-requirements.md
documentation/implementation/: CLAUDE.md  portwatcher-architecture.md  portwatcher-v2-architecture.md
documentation/milestones/: CLAUDE.md  MASTER-PLAN.md
documentation/milestones/portwatcher-2025/: README.md  milestone-1-foundation.md  milestone-2-port-scanning.md  milestone-3-process-management.md  milestone-4-system-tray.md  milestone-5-frontend.md
documentation/reference/: CLAUDE.md  README.md
documentation/workflows/: CLAUDE.md  portwatcher-v2-workflow.md  portwatcher-workflow.md
scripts/: install.sh  uninstall.sh  update.sh
src/: app.tsx  index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  port_scanner.rs  presets.rs  process_manager.rs  process_resolver.rs  types.rs
src/components/: FilterPanel.tsx  RangeScanner.tsx  SearchBar.tsx  SettingsModal.tsx  StatusBar.tsx  Toast.tsx
src/components/PortTable/: PortRow.tsx  PortTable.tsx  TableHeader.tsx  index.ts
src/hooks/: usePorts.ts  useSettings.ts  useTauriEvents.ts
src/lib/: tauri.ts
src/store/: signals.ts  types.ts
src/styles/: index.css
(+6 files in other folders)
