[package]
name = "portwatcher"
version = "0.1.0"
description = "A system tray application to monitor and manage processes on network ports"
authors = ["PortWatcher"]
edition = "2021"

[lib]
name = "portwatcher_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
nix = { version = "0.29", features = ["signal", "process", "user"] }
users = "0.11"
thiserror = "1"
